feat: add field id to endpoint get user current
