# docs/swagger.yaml
@@ -418,6 +418,10 @@ definitions:
     type: object
   response.FindReviewResponse:
     properties:
+      car:
+        allOf:
+        - $ref: '#/definitions/response.ReviewCarResponse'
+        x-order: "5"
       content:
         example: Lorem ipsum dolor sit amet
         type: string
@@ -453,6 +457,25 @@ definitions:
         example: token
         type: string
     type: object
+  response.GetUserCurrentResponse:
+    properties:
+      email:
+        example: luigi@sam.com
+        type: string
+        x-order: "3"
+      id:
+        example: 1
+        type: integer
+        x-order: "0"
+      role:
+        example: USER
+        type: string
+        x-order: "4"
+      username:
+        example: luigi
+        type: string
+        x-order: "2"
+    type: object
   response.LoginResponse:
     properties:
       email:
@@ -485,6 +508,13 @@ definitions:
       username:
         example: luigi
         type: string
+        x-order: "0"
+    type: object
+  response.ReviewCarResponse:
+    properties:
+      id:
+        example: 1
+        type: integer
         x-order: "0"
     type: object
   response.ReviewResponse:
@@ -846,6 +876,25 @@ definitions:
       payload:
         allOf:
         - $ref: '#/definitions/response.ForgotPasswordResponse'
+        x-order: "2"
+    type: object
+  web.WebSuccess-response_GetUserCurrentResponse:
+    properties:
+      code:
+        example: 200
+        type: integer
+        x-order: "0"
+      message:
+        example: success
+        type: string
+        x-order: "1"
+      metadata:
+        allOf:
+        - $ref: '#/definitions/web.Metadata'
+        x-order: "3"
+      payload:
+        allOf:
+        - $ref: '#/definitions/response.GetUserCurrentResponse'
         x-order: "2"
     type: object
   web.WebSuccess-response_LoginResponse:
@@ -1877,7 +1926,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/web.WebSuccess-response_RegisterResponse'
+            $ref: '#/definitions/web.WebSuccess-response_GetUserCurrentResponse'
         "400":
           description: Bad Request
           schema:
